--- a/Apple vs Google Play Apps.ipynb
+++ b/Apple vs Google Play Apps.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -609,8 +609,8 @@
        "      <th>App</th>\n",
        "      <th>Price</th>\n",
        "      <th>Reviews</th>\n",
-       "      <th>Rating</th>\n",
        "      <th>Genres</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -619,68 +619,68 @@
        "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
        "      <td>0</td>\n",
        "      <td>159</td>\n",
-       "      <td>4.1</td>\n",
        "      <td>Art &amp; Design</td>\n",
+       "      <td>4.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Coloring book moana</td>\n",
        "      <td>0</td>\n",
        "      <td>967</td>\n",
-       "      <td>3.9</td>\n",
        "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>3.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
        "      <td>0</td>\n",
        "      <td>87510</td>\n",
-       "      <td>4.7</td>\n",
        "      <td>Art &amp; Design</td>\n",
+       "      <td>4.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sketch - Draw &amp; Paint</td>\n",
        "      <td>0</td>\n",
        "      <td>215644</td>\n",
-       "      <td>4.5</td>\n",
        "      <td>Art &amp; Design</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
        "      <td>0</td>\n",
        "      <td>967</td>\n",
-       "      <td>4.3</td>\n",
        "      <td>Art &amp; Design;Creativity</td>\n",
+       "      <td>4.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 App Price Reviews  Rating  \\\n",
-       "0     Photo Editor & Candy Camera & Grid & ScrapBook     0     159     4.1   \n",
-       "1                                Coloring book moana     0     967     3.9   \n",
-       "2  U Launcher Lite – FREE Live Cool Themes, Hide ...     0   87510     4.7   \n",
-       "3                              Sketch - Draw & Paint     0  215644     4.5   \n",
-       "4              Pixel Draw - Number Art Coloring Book     0     967     4.3   \n",
+       "                                                 App Price Reviews  \\\n",
+       "0     Photo Editor & Candy Camera & Grid & ScrapBook     0     159   \n",
+       "1                                Coloring book moana     0     967   \n",
+       "2  U Launcher Lite – FREE Live Cool Themes, Hide ...     0   87510   \n",
+       "3                              Sketch - Draw & Paint     0  215644   \n",
+       "4              Pixel Draw - Number Art Coloring Book     0     967   \n",
        "\n",
-       "                      Genres  \n",
-       "0               Art & Design  \n",
-       "1  Art & Design;Pretend Play  \n",
-       "2               Art & Design  \n",
-       "3               Art & Design  \n",
-       "4    Art & Design;Creativity  "
+       "                      Genres  Rating  \n",
+       "0               Art & Design     4.1  \n",
+       "1  Art & Design;Pretend Play     3.9  \n",
+       "2               Art & Design     4.7  \n",
+       "3               Art & Design     4.5  \n",
+       "4    Art & Design;Creativity     4.3  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_google_df=google_df[['App', 'Price', 'Reviews','Rating', 'Genres' ]].copy()\n",
+    "new_google_df=google_df[['App', 'Price', 'Reviews','Genres', 'Rating' ]].copy()\n",
     "new_google_df.head() "
    ]
   },
