--- a/Lorena's Analysis/Lorena's Other Apple vs Google Play Apps.ipynb
+++ b/Lorena's Analysis/Lorena's Other Apple vs Google Play Apps.ipynb
@@ -2385,11 +2385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql_db.to_csv('../new_apps_db.csv', index=False)\n"
+    "sql_db.to_csv('../no_index.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_db.to_csv('../with_index.csv')"
    ]
   },
   {
