updated readme and files

--- a/AppleVSAndroidApps.ipynb
+++ b/AppleVSAndroidApps.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "file = \"./app_table.csv\"\n",
+    "file = \"./data/app_table.csv\"\n",
     "apps_df = pd.read_csv(file)\n",
     "apps_df"
    ]
@@ -526,56 +526,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# apps_db = apps_df[['app', 'price', 'reviews', 'genres', 'rating', 'os']].copy()\n",
-    "# apps_db.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = apps_db.reset_index()\n",
-    "# df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_df = df.rename(columns={\"index\": \"ID\",\n",
-    "#                                                           \"app\": \"App\", \n",
-    "#                                                           \"price\": \"Price\",\n",
-    "#                                                            \"reviews\":\"Total_Ratings\",\n",
-    "#                                                             \"genres\":\"Genre\", \"rating\":\"User_Rating\", \"os\":\"OS\"})\n",
-    "# new_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "rds_connection_string = \"postgres:postgres@localhost:5432/apps_db\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['final_apps', 'new_apps_db', 'apple_google_apps']"
+       "['new_apps_db', 'final_apps', 'apple_google_apps']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,20 +561,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>App</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Total_Ratings</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>User_Rating</th>\n",
+       "      <th>OS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>324</td>\n",
+       "      <td>- Free Comics - Comic Apps</td>\n",
+       "      <td>0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>Comics</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Android</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5523</td>\n",
+       "      <td>-The 穴通し3D- 君の記憶力x反射神経を問う! ～Mr.CURVEからの挑戦状 ～</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2705</td>\n",
+       "      <td>! OH Fantastic Free Kick + Kick Wall Challenge</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3551</td>\n",
+       "      <td>( OFFTIME ) light – Track how much you use you...</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Health &amp; Fitness</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6666</td>\n",
+       "      <td>*Solitaire*</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>460</td>\n",
+       "      <td>Games</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                                                App Price  \\\n",
+       "0   324                         - Free Comics - Comic Apps     0   \n",
+       "1  5523       -The 穴通し3D- 君の記憶力x反射神経を問う! ～Mr.CURVEからの挑戦状 ～   0.0   \n",
+       "2  2705     ! OH Fantastic Free Kick + Kick Wall Challenge   0.0   \n",
+       "3  3551  ( OFFTIME ) light – Track how much you use you...  2.99   \n",
+       "4  6666                                        *Solitaire*   0.0   \n",
+       "\n",
+       "  Total_Ratings             Genre  User_Rating       OS  \n",
+       "0           115            Comics          3.5  Android  \n",
+       "1             0             Games          0.0    Apple  \n",
+       "2             0             Games          0.0    Apple  \n",
+       "3            22  Health & Fitness          2.0    Apple  \n",
+       "4           460             Games          4.5    Apple  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# new_df.to_csv('final_app.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# final_app.to_sql('final_apps.sql')"
+    "pd.read_sql_query('select * from final_apps', con=engine).head()"
    ]
   },
   {
